Missed refactors after Reflect.getNewInstance.
After adding the newInstance function these guys were supposed to be refactored but they slipped through.